Compilador-Tcc/bin/parse/Compiler.jj
/**
 * JavaCC template file created by SF JavaCC plugin 1.5.28+ wizard for JavaCC 1.5.0+
 */options  
{
    DEBUG_PARSER = false;
    DEBUG_TOKEN_MANAGER = false;
}PARSER_BEGIN(Compilador)

package parse;
import java.io.*;
import java.util.LinkedList;
import classes.*;
import destino.*;
public class Compilador{
  public static ListaMacros macros = new ListaMacros();
  public static ListaTipos tipos = new ListaTipos();
    public static void main(String args []) throws ParseException  {
    try{		Compilador compilador = new Compilador(new FileInputStream("entrada.txt"));	    while (true)	    {	      	System.out.println("Reading from standard input...");
	      	compilador.inicio(macros,tipos);
	      	LinguagemDestino.geraCodigoDestino("saida");
	      	break;	    }
	}catch(FileNotFoundException e){
        System.out.println("Erro: arquivo nao encontrado!\n");
    }  }}PARSER_END(Compilador)SKIP :{  " "| "\r"| "\t"| "\n"}TOKEN :{
  < TYPE : "type" >
| < ATRIB : ":" >
| < TYPE_ESCOLHIDO : "Artigo" >
| < DESCRITOR : "Author"|"Title"|"Date"|"Place"|"Pontuation" >
| < DESCRITOR_MIN : "author"|"title"|"date"|"place"|"pontuation" >
| < VIRG : "," >
| < #PONTUACAO : ","|";"|":" >
| < #LASTNAME : "lastName" >
| < #UPPERCASE : "uppercase" >
| < #CAPITALIZED : "capitalized" >
| < #DATA : "dd/mm/yyyy" >
| < PROP : < LASTNAME >|< UPPERCASE >|< CAPITALIZED >|< DATA >|< PONTUACAO > >
| < ENDLINE : "$" >}

void inicio(ListaMacros macros,ListaTipos tipos): { Macro macro = null;Tipo tipo = null; }
{
  	(
  	  macro = macros()
  	  {
  	    macros.insere(macro);
  	  }  	)+
  	< ENDLINE >
  	(
  	  tipo = tipos()
  	  {
  	    tipos.insere(tipo);
  	  }
  	)+
  	< EOF >}

Macro macros(): {Macro macros = new Macro();Token nome = null;Token prop = null;}
{
	nome = < DESCRITOR >
	{
	  	macros.setNome(nome.image);
	}
	< ATRIB >
	prop = < PROP >
	{
	  	macros.insere(prop.image);
	}
	(
	  	< VIRG >
		prop = < PROP >
		{
		  macros.insere(prop.image);
		}
	)*
	< ENDLINE >
	{
	  return macros;
	}
}

Tipo tipos(): {Tipo tipos = new Tipo();Token nome = null;Token prop = null;}
{
  	< TYPE > < ATRIB >
	nome = < TYPE_ESCOLHIDO >
	{
	  	tipos.setNome(nome.image);
	}
	< ENDLINE >
	prop = < DESCRITOR_MIN >
	{
	  	tipos.insere(prop.image);
	}
	(
	  	< VIRG >
		prop = < DESCRITOR_MIN >
		{
		  tipos.insere(prop.image);
		}
	)*
	< ENDLINE >
	{
	  return tipos;
	}
}
